week-4/day-6/yaml-practice/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
spec:
  containers:
    - image: busybox
      name: busy
      command: ['sh', '-c', 'sleep 3600']
