week-4/day-6/yaml-practice/obs-task.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: probe-fail
  name: probe-fail
spec:
  containers:
  - image: nginx:1.21
    name: probe-fail
    resources: {}
    readinessProbe:
      httpGet:
        path: /
        port: 80
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
