week-4/day-6/yaml-practice/task4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - image: busybox
        name: busybox
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 128Mi
        livenessProbe:
          exec:
            command:
              - 'ls'
              - '/tmp'
          periodSeconds: 10
        command: ['sh', '-c', 'sleep 3600']
