week-4/day-6/yaml-practice/task1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cache
  name: cache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - image: redis:7
        name: redis

---

apiVersion: v1
kind: Service
metadata:
  name: cache-np
spec:
  type: NodePort
  selector:
    app: cache
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 30079
