week-4/day-6/yaml-practice/task3-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-svc
  name: api-svc
  namespace: app
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: api
  type: ClusterIP
