week-4/day-6/yaml-practice/task2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-ingress
spec:
  rules:
  - host: shop.local
    http:
      paths:
      - backend:
          service:
            name: "shop-front"
            port:
              number: 80
        path: /
        pathType: Prefix
