week-4/day-6/yaml-practice/np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring-egress
  namespace: app
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: api
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            team: platform
        podSelector:
          matchLabels:
            role: metrics
      ports:
        - port: 9090
          protocol: "TCP"
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
      ports: 
        - port: 53
          protocol: 'UDP'
